# clavr

./: .gitignore  README.md  Setup.hs  cabal.project  clavr.cabal  hie.yaml  stack.yaml  synth.sh  work-obj08.cf
example/Example/: Project.hs  SocSpec.hs  program.S
memory/: project_pipeline_design.md
sim/: Makefile  tb_avr_soc.vhdl
sim/work/: work-obj08.cf
src/: AVR.hs  Core.hs
src/AVR/: ALU.hs  CPU.hs  Core.hs  Exec.hs  ISA.hs  InstructionSet.hs  Interrupt.hs  TH.hs  instructions.md  memoryMap.md
src/AVR/ISA/: Arith.hs  BitOps.hs  Branch.hs  Mem.hs  Types.hs
src/AVR/Periph/: GPIO.hs
src/Core/: ALU.hs  CPU.hs  ISA.hs  Pipeline.hs  cpu.md
src/Example/: Project.hs  program.S
tests/: TestAVRSynth.hs  doctests.hs  unittests.hs  vhdl_sim.hs
tests/Tests/AVR/: CPU.hs  InstructionSet.hs  Instructions.hs  Interrupt.hs
tests/Tests/Core/: ISA.hs  Pipeline.hs
tests/Tests/Example/: Project.hs
tests/fixtures/: alu_test.S  basic.S  branch_test.S  gpralias_test.S  gprwrite_test.S  imm_test.S  jump_test.S  mem_test.S  mul_test.S  ramp_demo.S  sph_test.S  timer_test.S  uart_test.S  zptr_test.S
tests/ghdl/: alu_tb.vhd  avr_sim.sh  avr_soc_tb.vhd  branch_tb.vhd  gpralias_tb.vhd  gprwrite_tb.vhd  imm_tb.vhd  mem_tb.vhd  mul_tb.vhd  ramp_tb.vhd  run_test.sh  sph_tb.vhd  timer_tb.vhd  uart_tb.vhd  zptr_tb.vhd
vhdl/Example.Project.topEntity/: avr_soc.sdc  avr_soc.vhdl  avr_soc_types.vhdl  clash-manifest.json  work-obj08.cf  work-obj93.cf
