cabal-version:       2.4
name:                clavr
version:             0.1
license:             MIT
author:              Jonathan Fraser <jonathanfras@gmail.com>
maintainer:          Jonathan Fraser <jonathanfras@gmail.com>
build-type:          Custom

custom-setup
  setup-depends:
    base      >= 4.12,
    Cabal     >= 3.0,
    directory >= 1.3,
    filepath  >= 1.4,
    process   >= 1.6

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    InstanceSigs
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables these optimizations. Note that the fields will
    -- remain strict.
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.8.4 && < 1.10,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,

    -- for AVR.TH
    template-haskell >= 2.16,
    bytestring


-- ---------------------------------------------------------------------------
-- Core library: generic CPU building blocks + AVR implementation
--
-- The 'example/' source directory contains Example.Project — a complete SoC
-- wiring the AVR core to block RAM, GPIO, and a synthesis top entity.  It
-- lives in a separate directory so users can read it as a self-contained
-- example of how to build their own SoC using this library.
--
-- Build synthesis artefacts with:
--   stack run clash -- Example.Project --vhdl
-- ---------------------------------------------------------------------------

library
  import: common-options
  hs-source-dirs: src example
  exposed-modules:
    -- Generic CPU infrastructure
    Core
    Core.Memory
    Core.ALU
    Core.Decode
    Core.CPU
    Core.ISA
    Core.Pipeline
    Core.Periph.GPIO
    -- AVR implementation
    AVR
    AVR.Core
    AVR.InstructionSet
    AVR.ALU
    AVR.CPU
    AVR.Exec
    AVR.Interrupt
    AVR.TH
    -- Standalone SoC example (see example/ directory)
    Example.Project
  default-language: Haskell2010

-- Builds the executable 'clash', with the full library (including example) in scope
executable clash
  main-is: bin/Clash.hs
  default-language: Haskell2010
  build-depends: base, clash-ghc, clavr
  if !os(Windows)
    ghc-options: -dynamic

-- Builds the executable 'clashi', with the full library in scope
executable clashi
  main-is: bin/Clashi.hs
  default-language: Haskell2010
  if !os(Windows)
    ghc-options: -dynamic
  build-depends: base, clash-ghc, clavr


test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          doctests.hs
  ghc-options:      -Wall -Wcompat -threaded
  hs-source-dirs:   tests
  build-depends:
    base,
    clavr,
    doctest-parallel >= 0.2 && < 0.4,

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  other-modules:
    Tests.Core.ISA
    Tests.Core.Pipeline
    Tests.Core.GPIO
    Tests.Example.Project
    Tests.AVR.InstructionSet
    Tests.AVR.Instructions
    Tests.AVR.Interrupt
    Tests.AVR.CPU
  build-depends:
    clavr,
    QuickCheck,
    clash-prelude-hedgehog,
    hedgehog,
    tasty >= 1.2 && < 1.6,
    tasty-hedgehog,
    tasty-th
