cabal-version:       3.0
name:                clavr
version:             0.1
license:             MIT
author:              Jonathan Fraser <jonathanfras@gmail.com>
maintainer:          Jonathan Fraser <jonathanfras@gmail.com>
build-type:          Simple

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    MultiParamTypeClasses
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    TemplateHaskell
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    AVR.ISA
    AVR.ISA.Types
    AVR.ISA.Arith
    AVR.ISA.Branch
    AVR.ISA.BitOps
    AVR.ISA.Mem
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    isacle:isacle-hdl
  default-language: Haskell2010

executable test-avr-synth
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestAVRSynth.hs
  build-depends:
    base >= 4.12 && < 4.22,
    directory >= 1.3,
    clavr,
    isacle,
    isacle:isacle-hdl

executable avr-soc-synth
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: example
  main-is: Example/SocSpec.hs
  build-depends:
    base >= 4.12 && < 4.22,
    bytestring >= 0.10,
    directory >= 1.3,
    clavr,
    isacle,
    isacle:isacle-hdl

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  build-depends:
    base >= 4.12 && < 4.22,
    tasty >= 1.2 && < 1.6,
    clavr,
    isacle,
    isacle:isacle-hdl

test-suite ghdl-sim
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: vhdl_sim.hs
  build-depends:
    base >= 4.12 && < 4.22,
    process >= 1.6
  build-tool-depends: clavr:avr-soc-synth
